# roid-rage-rust

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Rocket.toml  TODO.rst  roid-rage.code-workspace
OLD/src/: collide.rs  collision_groups.rs  components.rs  lib.rs  systems.rs
OLD/src/controller/: basic_controller.rs  mod.rs
OLD/src/model/: explodable.rs  model.rs  projection_collider.rs  traits.rs
config/: display.ron
driver-pilot/: Cargo.toml
driver-pilot/src/: main.rs
manual-pilot/: Cargo.toml
manual-pilot/src/: lib.rs  main.rs  pilot.rs
pilot-lib/: Cargo.toml  README.md
pilot-lib/src/: lib.rs  pilot_base.rs  velocity_model.rs
pilot-lib/src/steering/: evade.rs  mod.rs  stop.rs  turn_to.rs
roid-rage/: Cargo.toml  README.md
roid-rage-grpc/: Cargo.toml  build.rs
roid-rage-grpc/proto/roid-rage/: roid-rage.proto
roid-rage-grpc/src/: lib.rs
roid-rage-pilot/: Cargo.toml  README.rst  test.http
roid-rage-pilot/src/: lib.rs  targeting.rs  types.rs
roid-rage-pilot/test-client/: Cargo.toml
roid-rage-pilot/test-client/src/: main.rs
roid-rage/docs/: ideas.md
roid-rage/src/: lib.rs  main.rs  pilot.rs  rendering.rs  settings.rs
roid-rage/src/components/: angular_velocity.rs  bullet.rs  collision.rs  collision_handle.rs  fire_timer.rs  fragment.rs  linear_velocity.rs  mod.rs  pilot.rs  position.rs  roid.rs  rotation.rs  ship.rs  wrapping.rs
roid-rage/src/core/: bearing.rs  collide.rs  field.rs  mod.rs  pilot.rs  util.rs  velocity_model.rs
roid-rage/src/systems/: detect_collisions.rs  explode_bullets.rs  explode_roids.rs  fire_on_targets.rs  logging.rs  mod.rs  move_objects.rs  pilots.rs  query_pilot.rs  register_pilots.rs  remove_out_of_bounds.rs  repopulate.rs  respawn_ship.rs  wrap_objects.rs
simple-pilot/: Cargo.toml  README.md
simple-pilot/src/: main.rs  targeting.rs
src/: app.rs  collide.rs  components.rs  controller.rs  explode.rs  explosion.rs  field.rs  game_object.rs  lib.rs  main.rs  object_set.rs  objects.rs  rendering.rs  roid_rage.rs  settings.rs  systems.rs  targeting.rs  traits.rs  util.rs  velocity.rs  velocity_model.rs  view.rs
src/components/: bullet.rs  collision_groups.rs  collision_handle.rs  fragment.rs  linear_motion.rs  linear_velocity.rs  mod.rs  roid.rs  rotational_motion.rs  time_delta.rs  transform.rs  velocity.rs  wrapping.rs
src/controller/: basic_controller.rs  mod.rs  targeting.rs  velocity_model.rs
src/core/: collide.rs  field.rs  mod.rs  targeting.rs  util.rs  velocity.rs  velocity_model.rs
src/model/: collidable.rs  explodable.rs  field.rs  game_object.rs  mod.rs  model.rs  object_map.rs  object_set.rs  projection_collider.rs
src/model/objects/: bullet.rs  fragment.rs  mod.rs  roid.rs
src/objects/: bullet.rs  categories.rs  collision_groups.rs  fragment.rs  game_object.rs  mod.rs  roid.rs  ship.rs  traits.rs
src/systems/: age_fragments.rs  cleanup_collisions.rs  collision.rs  collision_cleanup.rs  collision_detection.rs  detect_collisions.rs  explode_bullets.rs  explode_roids.rs  fire_on_targets.rs  linear_motion.rs  logging.rs  mod.rs  move_objects.rs  out_of_bounds.rs  remove_out_of_bounds.rs  repopulate.rs  targeting.rs  velocity.rs  wrap_objects.rs  wrapping.rs
src/types/: velocity.rs
sted/: Cargo.toml  README.md
sted/src/: bearing.rs  direction.rs  lib.rs  velocity.rs
steering/: Cargo.toml
steering/src/: lib.rs
