[package]
name = "roid_rage"
version = "0.1.0"
authors = ["Austin Bingham <austin.bingham@gmail.com>"]
edition = "2018"

[dependencies]
approx = "0.3.2"
piston = "0.42.0"
piston2d-graphics = "0.30.0"
pistoncore-glutin_window = "0.54.0"
piston2d-opengl_graphics = "0.59.0"
nalgebra = "0.19.0"
rand = "0.6.5"
specs = "0.15.0"
ncollide2d = "0.21.0"
uuid = { version = "0.7", features = ["v4"] }

[dev-dependencies]
itertools-num = "0.1.3"
