[package]
name = "driver-pilot"
version = "0.1.0"
authors = ["Austin Bingham <austin.bingham@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.19"
float-cmp = "0.6.0"
rand = "0.6.5"
tonic = "0.6.2"
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros"] }
roid-rage-grpc = { path = "../roid-rage-grpc" }

[dependencies.roid-rage]
path = "../roid-rage"

[dependencies.sted]
path = "../sted"