[package]
authors = ["Austin Bingham <austin.bingham@gmail.com>"]
edition = "2021"
name = "driver-pilot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.19"
rand = "0.6.5"
roid-rage-grpc = {path = "../roid-rage-grpc"}
steering = {path = "../steering"}
tokio = {version = "1.15.0", features = ["rt-multi-thread", "macros"]}
tonic = "0.6.2"

[dependencies.roid-rage]
path = "../roid-rage"

[dependencies.sted]
path = "../sted"
