[package]
authors = ["Austin Bingham <austin.bingham@gmail.com>"]
edition = "2021"
name = "driver-pilot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.34.1"
rand = "0.9.2"
roid-rage-grpc = {path = "../roid-rage-grpc"}
pilot-lib = {path = "../pilot-lib"}
tokio = {version = "1.49.0", features = ["rt-multi-thread", "macros"]}
tonic = "0.14.2"

[dependencies.roid-rage]
path = "../roid-rage"

[dependencies.sted]
path = "../sted"
