[package]
name = "manual-pilot"
version = "0.1.0"
edition = "2021"
authors = ["Austin Bingham <austin.bingham@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roid-rage-grpc = { path = "../roid-rage-grpc" }
tonic = "0.6.2"
tokio = { version = "1.15.0", features = ["macros"] }
device_query = "0.2.8"