[package]
authors = ["Austin Bingham <austin.bingham@gmail.com>"]
edition = "2021"
name = "manual-pilot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "0.2.8"
roid-rage = {path = "../roid-rage"}
roid-rage-grpc = {path = "../roid-rage-grpc"}
pilot-lib = {path = "../pilot-lib"}
tokio = {version = "1.15.0", features = ["macros"]}
tonic = "0.6.2"
