[package]
edition = "2021"
name = "pilot-lib"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "0.10.0"
glam = "0.30.10"
roid-rage = {path = "../roid-rage"}
roid-rage-grpc = {path = "../roid-rage-grpc"}
sted = {path = "../sted"}
structopt = "0.3.26"
tokio = "1.49.0"
tonic = "0.14.2"
