[package]
name = "simple-pilot"
version = "0.1.0"
authors = ["Austin Bingham <austin.bingham@gmail.com>"]
edition = "2018"

[dependencies]
nalgebra = "0.19"
glam = "*"
roid-rage-grpc = { path = "../roid-rage-grpc" }
roid-rage = {path = "../roid-rage"}
sted = {path = "../sted"}
tonic = "0.6.2"
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros"] }