[package]
authors = ["Austin Bingham <austin.bingham@gmail.com>"]
edition = "2018"
name = "simple-pilot"
version = "0.1.0"

[dependencies]
glam = "*"
nalgebra = "0.19"
pilot-lib = {path = "../pilot-lib"}
roid-rage = {path = "../roid-rage"}
roid-rage-grpc = {path = "../roid-rage-grpc"}
sted = {path = "../sted"}
tokio = {version = "1.15.0", features = ["rt-multi-thread", "macros"]}
tonic = "0.6.2"
